syntax = "proto3";

package auth;

option go_package = "github.com/AmirMirzayi/clean_architecture/api/proto/auth";

import "google/api/annotations.proto";

message RegisterRequest {
  string user_name = 1;
  string password = 2;
}
message RegisterResponse {
  string user_id = 1;
}

service AuthService {
  rpc Register(RegisterRequest) returns(RegisterResponse) {
    option (google.api.http) = {
      post: "/v1/test"
      body: "*"
    };
  }
}
